# stk8321

./: README.md
inc/: stk8321.h  stk8321_i2c.h  stk8321_registers.h  stk8321_spi.h
projects/zephyr/spi_read_accel_and_enable_sig_motion/: README.md
projects/zephyr/spi_read_accel_and_enable_sig_motion/boards/: nrf52840dk_nrf52840.overlay
projects/zephyr/spi_read_accel_and_enable_sig_motion/inc/: main.h
projects/zephyr/spi_read_accel_and_enable_sig_motion/src/: main.c
projects/zephyr/stk8321_nrf52840/: CMakeLists.txt
projects/zephyr/stk8321_nrf52840/src/: main.c
src/: stk8321.c  stk8321_i2c_zephyr.c  stk8321_spi.c  stk8321_spi_zephyr.c
zephyr/stk8321_nrf52840/: CMakeLists.txt  README.md
zephyr/stk8321_nrf52840/boards/: nrf52840dk_nrf52840.overlay
zephyr/stk8321_nrf52840/inc/: main.h  stk8321.h  stk8321_registers.h  stk8321_spi.h
zephyr/stk8321_nrf52840/src/: main.c  stk8321.c  stk8321_spi.c
